--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&family=Tajawal:wght@300&display=swap");
+
+.navbar-brand {
+  font-size: 44px;
+  font-family: 'Tajawal', sans-serif;
+}
+
+.header-title {
+  font-size: 45px;
+  font-family: 'Tajawal', sans-serif;
+}
+
+.nav-link {
+  font-size: 26px;
+  font-family: 'Tajawal', sans-serif;
+}
+.nav-link:hover {
+  background-color: rgba(255, 255, 255, 0.164);
+  border-radius: 10px;
+}
+
+.active {
+  background-color: rgba(255, 255, 255, 0.164);
+  border-radius: 10px;
+  color: black;
+}
+.active:hover {
+  background-color: rgba(255, 255, 255, 0.164);
+  border-radius: 10px;
+  color: black;
+  text-decoration: none;
+}
+
+.intro-text {
+  font-family: 'Tajawal', sans-serif;
+  font-size: 24px;
+  background-color: #d2f6f863;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.bold-text {
+  font-family: 'Tajawal', sans-serif;
+  font-size: 24px;
+  background-color: #d2f6f863;
+  border-radius: 10px;
+  padding: 5px;
+  font-weight: bolder;
+}
+
+.img-fluid {
+  background-color: #d2f6f863;
+  border-radius: 25px;
+  padding: 5px;
+}
+
+.fa {
+  padding: 13px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-decoration: none;
+  border-radius: 50%;
+  background: #338adb63;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.fa:hover {
+  background-color: #d2f6f863;
+  text-decoration: none;
+  color: #338adb63;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icon {
+  font-size: 24px;
+}
+
+.sub-title {
+  font-family: 'Tajawal', sans-serif;
+  background-color: #d2f6f863;
+  border-radius: 10px;
+  padding: 5px;
+  letter-spacing: 2.6px;
+}
+
+.project {
+  background-color: #fbefcc9a;
+  border-radius: 10px;
+}
+.project:hover {
+  background-color: #fbefcc;  
+} 
+
+.card-text {
+  font-family: 'Tajawal', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+}
+.card-text:hover {
+  text-decoration: none;
+  color: #338adb63;
+}
+.repo {
+  font-size:18px;
+}
+.repo:hover{
+  color: #338adb63;
+}
+.resume {
+  font-family: 'Tajawal', sans-serif;
+  font-size: 28px;
+  background-color: #f4fbcc63;
+  border-radius: 10px;
+  align-items: center;
+  text-align: center;
+}
+.link {
+  text-decoration: none; 
+  color: #667292;
+  font-weight: bold;
+}
+.link:hover {
+  text-decoration: none;
+  color: #338adb63;
+}
+.card-img-top {
+  height: 200px;
+  padding: 10px;
+}
+.card-footer {
+  background-color: #f9ccac7e;
+  font-family: 'Tajawal', sans-serif;
+  font-size: 32px;
 }
